# qt-list-model

./: CMakeLists.txt  PersonModel.cpp  PersonModel.h  main.cpp  main.qml
